# Cursor_Test

./: .gitignore  README.md  game.js  index.html  style.css
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: chat.py  conversations.py  health.py
backend/app/llm/: __init__.py  provider.py
backend/app/models/: conversation.py  message.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  Layout.tsx  MarkdownRenderer.tsx  ParticleBackground.tsx  Sidebar.tsx
frontend/src/pages/: Chat.tsx  Home.tsx
frontend/src/store/: useChatStore.ts
